[package]
name = "fluff-lib-rs"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "1.5.2"
aws-sdk-dynamodb = "1.35.0"
http = "1.1.0"
lambda_http = "0.11.4"
serde = "1.0.203"
serde_json = "1.0.117"
